      \code{frequency} are supported more consistently; thanks to a report
      from Johann Kleinbub and analysis and patch by Duncan Murdoch in \PR{17669}.

      \item \code{mcmapply} in case of errors now preserves attributes of
      returned \code{"try-error"} objects and avoids simplification,
      overriding \code{SIMPLIFY} to \code{FALSE}. (\PR{17653})
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.2 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item The included LAPACK has been updated to version 3.9.0 (for
      the included routines, just bug fixes).
    }
  }

}

\section{\Rlogo CHANGES IN R 3.6.2}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{runmed(x, *)} gains a new option \code{na.action}
      determining \emph{how} to handle \code{NaN} or \code{NA} in \code{x}.

      \item \code{dotchart()} gains new options \code{ann}, \code{xaxt},
      \code{frame.plot} and \code{log}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item Detection of the C stack direction has been moved from
      run-time to \command{configure}: this is safer with LTO builds and
      allows the detection to be overridden -- see file
      \file{config.site}.

      \item Source-code changes enable installation on platforms using
      \command{gcc -fno-common} (the expected default for
      \command{gcc 10.x}).
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item \code{installTrChar} (which is nowadays is wrapped by
      \code{installChar}) is defined in \file{Rinternals.h}.  (Neither
      are part of the API.)
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Header \file{Rconfig.h} contains the value of
      \code{FC_LEN_T} deduced at installation which is used by the
      prototypes in headers \file{R_ext/BLAS.h} and
      \file{R_ext/Lapack.h} but to avoid extensive breakage this is
      only exposed when \code{USE_FC_LEN_T} is defined.
